Refactor core.services; review scope identification